--- a/User Mangement Identity/User Management  with Identity/User Management  with Identity/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/User Mangement Identity/User Management  with Identity/User Management  with Identity/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using User_Management__with_Identity.Areas.Identity
 @using User_Management__with_Identity.Areas.Identity.Pages
+@using User_Management__with_Identity.Models;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
